[Frontend] [Fix] vertical align icons

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -183,7 +183,7 @@ body {
   color: white;
   font-size: 1rem;
   font-weight:lighter ;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .home-block-1, .home-block-2, .home-block-3 {
@@ -239,6 +239,7 @@ body {
 
 .feature-container {
   display: flex;
-  /* flex-direction: column; */
   align-items: center;
+  height: 100%; /* Adjust the height as needed */
+
 }
